--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,6 +1,6 @@
 body {
     background: #2b2b2b;
-    font-family: "Cascadia Mono", monospace;
+    font-family: "Source Code Pro", monospace;
 }
 
 p {
